--- a/HR/templates/login.html
+++ b/HR/templates/login.html
@@ -20,15 +20,15 @@
   <div class="col-md-8" style="background-image: url('{{backgroundImage}}');background-size: cover;height:100%;position:absolute;left:0px;">
   </div>
   <div class="col-md-4 text-center" style="background-color:#eeeeee;height:100%;position:absolute;right:0px;">
-    <img src="/static/images/i2i.png" alt="" style="margin-top:10vh;">
-    <form method="post" class="form-signin" action="" style="margin-top:7vh">
+    <img src="/static/images/Bruderer_Logo_svg.svg" alt="" style="margin-top:15vh;height:10vh;width:25vh">
+    <form method="post" class="form-signin" action="" style="margin-top:1vh">
       {% csrf_token %}
-      <a title="Google" class="btn btn-danger btn-block" href="{% provider_login_url "google" method="oauth2" %}">
+      <!-- <a title="Google" class="btn btn-danger btn-block" href="{% provider_login_url "google" method="oauth2" %}">
         <i class="fa fa-google-plus pull-left"></i>Login with Google
       </a>
       <a href="{% provider_login_url "facebook" method="oauth2" %}" class="btn btn-primary btn-block" >
         <i class="fa fa-facebook pull-left"></i> Login with Facebook
-      </a>
+      </a> -->
 
       <h2 class="form-signin-heading" style="color:black;margin-top:7vh">Login</h2>
       {% if authStatus.status != 'default' %}
