--- a/HR/templates/approval.html
+++ b/HR/templates/approval.html
@@ -170,7 +170,7 @@
             td2.appendChild(document.createTextNode(productDetails[i].products.description_1));
             td3.appendChild(document.createTextNode(productDetails[i].price));
             td4.appendChild(document.createTextNode(productDetails[i].quantity1));
-            td5.appendChild(document.createTextNode(productDetails[i].customer_price));
+            td5.appendChild(document.createTextNode(productDetails[i].landed_price));
             tr.appendChild(td1);
             tr.appendChild(td2);
             tr.appendChild(td3);
