--- a/support/templates/app.approval.email.html
+++ b/support/templates/app.approval.email.html
@@ -255,7 +255,7 @@
                 {{u.quantity1}}
               </td>
               <td width="100" align="center" style="border:1px solid rgb(15, 15, 15);">
-                {{u.customer_price}}
+                {{u.landed_price}}
               </td>
             </tr>
             {% endfor %}
