--- a/homepage/templates/app.homepage.index.html
+++ b/homepage/templates/app.homepage.index.html
@@ -287,7 +287,7 @@
   <div class="col-md-8 col-md-offset-2 text-center" style="color:#fff;padding:130px 0px;">
     <h1> <strong>Ready to take the lead?</strong></h1> <br>
     <h4>Choose open, extensible, secure automations</h4> <br>
-    <button type="button" style="background-color:#ff6900;border:none;" class="btn btn-warning bigbtn" name=""><b>Get Started with Go!</b> </button>
+    <button type="button" style="background-color:#ff6900;border:none;" class="btn btn-warning bigbtn" ng-click="schedule()"><b>Get Started with Go!</b> </button>
     <!-- <button type="button" class="btn btn-warning btn-lg text-center big-xl" style="margin-top:10px;">
       <strong>Get Started with Go!</strong>
     </button> -->
