--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -22,7 +22,7 @@
         <li class="header_element">
           <a href="" ng-mouseleave="show[0]=false" ng-mouseover="show[0]=true"> RPA</a>
           <ul ng-mouseleave="keepshow[0]=false" ng-click="keepshow[0] = false; toggleNavbar = false;" ng-mouseover="keepshow[0]=true" ng-show="show[0]||keepshow[0]" class="container_box" >
-            <li><a href="#">{% trans 'whatisrpa' %}</a></li>
+            <li><a href="/rpa">{% trans 'whatisrpa' %}</a></li>
             <li><a href="#">RPA in 2018</a></li>
             <li><a href="#">RPA Resources</a></li>
           </ul>
@@ -42,14 +42,14 @@
           <ul ng-mouseleave="keepshow[2]=false" ng-click="keepshow[2] = false; toggleNavbar = false;" ng-mouseover="keepshow[2]=true" ng-show="show[2]||keepshow[2]" class="container_box">
           <li><a href="/industry">By Industry</a></li>
           <li><a href="#">By Technology</a></li>
-          <li><a href="#">Webinars</a></li>
+          <!-- <li><a href="#">Webinars</a></li> -->
           </ul>
         </li>
         <li class="header_element">
           <a href="" ng-mouseleave="show[3]=false" ng-mouseover="show[3]=true"> Company</a>
             <ul ng-mouseleave="keepshow[3]=false" ng-click="keepshow[3] = false; toggleNavbar = false;" ng-mouseover="keepshow[3]=true" ng-show="show[3]||keepshow[3]" class="container_box">
           <li><a href="/about">About US</a></li>
-          <li><a href="#">Investors</a></li>
+          <!-- <li><a href="#">Investors</a></li> -->
           <li><a href="/career">Careers</a></li>
           <li><a href="/conatact_us">Contact US</a></li>
           </ul>
