--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -241,6 +241,10 @@
   font-family: sans-serif;
 }
 
+.ai_img_div {
+  padding: 30px;
+}
+
 .hero-button {
   border: 2px solid #013157;
   padding: 10px;
@@ -505,7 +509,7 @@
   letter-spacing: 0.3px;
   line-height: 1.5;
   display: inline-block;
-  font-family: cursive, sans-serif;
+  font-family: sans-serif;
   position: relative;
 }
 
@@ -516,13 +520,13 @@
   font-weight: lighter;
   text-transform: uppercase;
   line-height: 1;
-  font-family: cursive, sans-serif;
+  font-family: sans-serif;
 }
 
 .stat_description {
   width: 40%;
   font-size: 4rem;
-  font-family: cursive, sans-serif;
+  font-family: sans-serif;
   margin-bottom: 30px;
   text-transform: none;
   margin-top: 0;
@@ -626,13 +630,13 @@
 }
 
 .left_title {
-  font-family: cursive;
+  font-family: sans-serif;
   font-weight: bold;
   font-size: 1.5rem
 }
 
 .left_description {
-  font-family: cursive;
+  font-family: sans-serif;
   font-weight: lighter;
   font-size: 7.5rem;
 }
@@ -652,6 +656,26 @@
   position: absolute;
   right: -50%;
   bottom: 1%;
+}
+
+.chart {
+  min-height: 790px;
+  height: 80vh;
+  overflow: visible !important;
+  position: relative;
+}
+
+.chart_graphic {
+  position: absolute;
+  top: -270px;
+  height: 100%;
+  pointer-events: none;
+  right: 0;
+  width: 100%;
+}
+
+.chart_svg {
+  width: 100vw;
 }
 
 /* currently working**********************************************************************************************************8 */
@@ -688,6 +712,10 @@
 
 /* mobile display size starts here.... */
 @media only screen and (max-width:768px) {
+  .ai_img_div {
+    padding: 0px;
+  }
+
   .detailRight {
     width: 100%;
     border: 0px solid black;
@@ -695,6 +723,7 @@
 
   .detailLeft {
     width: 100%;
+    height: 80vh;
   }
 
   #bpoDesc {
@@ -782,8 +811,8 @@
   }
 
   .arrow_text {
-    padding: 0px 0px 0px 40px;
-    margin-right: -50px;
+    padding: 0px 0px 0px 30px;
+    margin-right: -7px;
   }
 
   .head {
@@ -793,7 +822,7 @@
   .head h1 {
     font-size: 25px;
     font-weight: lighter;
-    font-family: cursive;
+    font-family: sans-serif;
     line-height: 1.5;
   }
 
@@ -909,7 +938,7 @@
   }
 
   .left_description {
-    font-family: cursive;
+    font-family: sans-serif;
     font-weight: lighter;
     font-size: 2.5rem;
     line-height: 1.6;
@@ -922,6 +951,17 @@
 
   .right_description {
     font-size: 1.5944rem;
+  }
+
+  .chart {
+    min-height: 80vh;
+    height: auto;
+    padding: 0rem 0 19.2rem;
+  }
+
+  .chart_graphic {
+    top: -270px;
+    padding-top: 0px;
   }
 
   /* .blog_container, .sec1Right, .sec2Left, .sec2thirdRow{
