--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -235,6 +235,7 @@
       var wampServer = '{{wampServer}}';
       var wampBindName = "{{user.username}}";
       var webRtcAddress = '{{webRtcAddress}}'
+      var wamp_prefix = '{{wamp_prefix}}'
       var BRAND_LOGO = "{{BRAND_LOGO}}";
       var appps;
       var xhttp = new XMLHttpRequest();
