--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -23,8 +23,8 @@
           <a href="" ng-mouseleave="show[0]=false" ng-mouseover="show[0]=true"> RPA</a>
           <ul ng-mouseleave="keepshow[0]=false" ng-click="keepshow[0] = false; toggleNavbar = false;" ng-mouseover="keepshow[0]=true" ng-show="show[0]||keepshow[0]" class="container_box" >
             <li><a href="/rpa">{% trans 'whatisrpa' %}</a></li>
-            <li><a href="#">RPA in 2018</a></li>
-            <li><a href="#">RPA Resources</a></li>
+            <li><a href="/rpa_2019">RPA in 2019</a></li>
+            <li><a href="/resources">RPA Resources</a></li>
           </ul>
         </li>
         <li class="header_element">
