--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -21,6 +21,7 @@
 
 <script>
   var erpUrl = '{{erpUrl}}'
+  var apiManagerUrl = '{{apiManagerUrl}}'
 </script>
 
 <script src="{% static 'js/js.cookie.min.js' %}"></script>
