--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -14,6 +14,7 @@
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/angular.chartjs/0.8.8/angular-chart.min.css" charset="utf-8">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.1/animate.min.css" charset="utf-8">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/6.4.0/rzslider.min.css" charset="utf-8">
+      <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet"> 
       <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/github.min.css"> -->
     {% else %}
       <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" charset="utf-8">
