--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -176,16 +176,16 @@
 }
 
 .hoverEffect:hover {
-    display: none;
-    opacity: 0.3 !important
+  display: none;
+  opacity: 0.3 !important
 }
 
 .overlay {
   position: absolute;
   width: 92%;
-  height:100%;
-  top:0;
-  bottom:0;
+  height: 100%;
+  top: 0;
+  bottom: 0;
   background: rgba(0, 0, 0, 0.9);
   text-align: center;
   opacity: 0;
@@ -199,9 +199,9 @@
 
 .search12 {
   position: absolute;
-  top:50%;
-  left:50%;
-  transform: translate(-50%,-50%);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   color: rgba(255, 255, 255, 0.8);
   font-size: 96px;
 }
@@ -870,23 +870,22 @@
 
 .resource_primary {
   float: left;
-  width: 45vh;
+  width: 22vw;
   position: absolute;
   background-color: #FF540A;
   top: -10vh;
   color: #fff;
   text-align: center;
-
 }
 
 .resource_secondary {
   float: left;
-  width: 45vh;
+  width: 22vw;
   position: absolute;
   background-image: linear-gradient(rgba(0, 0, 0, 0.72), rgba(0, 0, 0, 0.9)), url('/static/images/neurons.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  left: 40.6%;
+  left: 39.6%;
   top: -10vh;
   color: #fff;
   text-align: center;
@@ -894,28 +893,33 @@
 
 .resource_clear {
   float: left;
-  width: 45vh;
+  width: 22vw;
   position: absolute;
   background-color: #002856;
   top: -10vh;
-  right: 8%;
+  right: 10%;
   color: #fff;
   text-align: center;
 }
-.res_1{
+
+.res_1 {
   position: relative;
 }
-.res_2{
+
+.res_2 {
   position: relative;
 }
-.res_3{
+
+.res_3 {
   position: relative;
 }
-.res_icon{
+
+.res_icon {
   width: 8vh;
 }
-.res_description{
-  font-size: 2.6rem;
+
+.res_description {
+  font-size: 1.2vw;
   font-weight: bold;
   font-family: sans-serif;
   position: absolute;
@@ -923,6 +927,60 @@
   left: 2%;
 }
 
+.thumbnil_overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.9);
+  text-align: center;
+  opacity: 0;
+  cursor: pointer;
+  min-height: 200px;
+  width: 100%
+}
+.play12{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 96px;
+}
+.thumbnil {
+  background-size: cover;
+  min-height: 200px;
+  width: 100%;
+  cursor: pointer;
+  position: relative;
+}
+.thumbnil:hover .thumbnil_overlay {
+  opacity: 0.8;
+  transition: 0.2s ease;
+  color:red;
+}
+
+
+.vertical-menu {
+  width: 100%;
+}
+
+.vertical-menu a {
+  background-color: #043966;
+  color: #fff;
+  display: block;
+  padding: 20px;
+  text-decoration: none;
+  font-size: 1.6rem;
+}
+
+.vertical-menu a:hover {
+  background-color: #FF6900;
+}
+
+.vertical-menu a.active {
+  background-color: #FF6900;
+  color: white;
+}
 /* .active_line{
   border: 3px solid #000;
   width:50%;
@@ -1270,11 +1328,45 @@
     width: 100%;
   }
 
+  .resource {
+    border-radius: 0px;
+  }
+
   .ai_img {
     padding-left: 6rem;
   }
 
+  .resource_div {
+    margin-top: 60px;
+    padding: 0px;
+    min-height: 60vh;
+  }
 
+  .resource_container {
+    max-width: 100%;
+  }
+
+  .resource_primary {
+    position: relative;
+    width: 100%;
+    left: 0;
+  }
+
+  .resource_secondary {
+    position: relative;
+    width: 100%;
+    left: 0;
+  }
+
+  .resource_clear {
+    position: relative;
+    width: 100%;
+    left: 0;
+  }
+
+  .res_description {
+    font-size: 5.8vw;
+  }
 
   /* .blog_container, .sec1Right, .sec2Left, .sec2thirdRow{
     flex-direction: column;
@@ -1382,7 +1474,7 @@
     flex: none;
   }
 
-  .sec1Right{
+  .sec1Right {
     flex-wrap: nowrap !important;
   }
 
