--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -40,8 +40,12 @@
         <li class="header_element">
           <a href="" ng-mouseleave="show[2]=false" ng-mouseover="show[2]=true"> Solutions </a>
           <ul ng-mouseleave="keepshow[2]=false" ng-click="keepshow[2] = false; toggleNavbar = false;" ng-mouseover="keepshow[2]=true" ng-show="show[2]||keepshow[2]" class="container_box">
-          <li><a href="/industry">By Industry</a></li>
-          <li><a href="#">By Technology</a></li>
+          <li><a href="/bpo">For BPO</a></li>
+          <li><a href="/finance">For Finance & Banking</a></li>
+          <li><a href="/chatbot">Chatbot</a></li>
+          <li><a href="/pdf_process">PDF Processing</a></li>
+          <li><a href="/nlp">NLP</a></li>
+          <li><a href="/excel_automation">Excel Automation</a></li>
           <!-- <li><a href="#">Webinars</a></li> -->
           </ul>
         </li>
