--- a/homepage/templates/app.homepage.emailOTP.html
+++ b/homepage/templates/app.homepage.emailOTP.html
@@ -244,6 +244,7 @@
                                 <div class="" align='left'>
                                   <p >Hi <strong>{{recieverName}}</strong>,</p>
                                   <br/>
+                                  <p>Your username is : {{username}}</p>
                                   <br/>
 
                                     {% for m in message %}
